--- a/index.html
+++ b/index.html
@@ -45,56 +45,87 @@
 
   <script>
     const verses = [
-      { text: "因為出於神的話，沒有一句不帶能力的。", ref: "路加福音 1:37" },
-{ text: "我留下平安給你們，我將我的平安賜給你們。", ref: "約翰福音 14:27" },
-{ text: "你不要害怕，因為我與你同在；不要驚惶，因為我是你的神。", ref: "以賽亞書 41:10" },
-{ text: "凡勞苦擔重擔的人可以到我這裡來，我就使你們得安息。", ref: "馬太福音 11:28" },
-{ text: "你要專心仰賴耶和華，不可倚靠自己的聰明。", ref: "箴言 3:5" },
-{ text: "神是我們的避難所，是我們的力量，是我們患難中隨時的幫助。", ref: "詩篇 46:1" },
-{ text: "你們禱告，無論求甚麼，只要信，就必得著。", ref: "馬太福音 21:22" },
-{ text: "耶和華是我的牧者，我必不致缺乏。", ref: "詩篇 23:1" },
-{ text: "你出你入，耶和華要保護你，從今時直到永遠。", ref: "詩篇 121:8" },
-{ text: "在指望中要喜樂，在患難中要忍耐，禱告要恆切。", ref: "羅馬書 12:12" },
-{ text: "我總不撇下你，也不丟棄你。", ref: "希伯來書 13:5" },
-{ text: "靠著那加給我力量的，凡事都能做。", ref: "腓立比書 4:13" },
-{ text: "我賜給你們一條新命令，乃是叫你們彼此相愛。", ref: "約翰福音 13:34" },
-{ text: "萬事都互相效力，叫愛神的人得益處。", ref: "羅馬書 8:28" },
-{ text: "願賜平安的主隨時親自賜你們平安。", ref: "帖撒羅尼迦後書 3:16" },
-{ text: "喜樂的心乃是良藥，憂傷的靈使骨枯乾。", ref: "箴言 17:22" },
-{ text: "你要以耶和華為樂，他就將你心裡所求的賜給你。", ref: "詩篇 37:4" },
-{ text: "主所賜的福使人富足，並不加上憂慮。", ref: "箴言 10:22" },
-{ text: "在世上你們有苦難，但你們可以放心，我已經勝了世界。", ref: "約翰福音 16:33" },
-{ text: "耶和華靠近傷心的人，拯救靈性痛悔的人。", ref: "詩篇 34:18" },
-{ text: "你們要將一切的憂慮卸給神，因為他顧念你們。", ref: "彼得前書 5:7" },
-{ text: "你們要剛強壯膽，不要害怕，也不要畏懼他們。", ref: "申命記 31:6" },
-{ text: "你們中間誰願為大，就必作你們的用人。", ref: "馬太福音 20:26" },
-{ text: "我耶和華必在你右邊幫助你。", ref: "以賽亞書 41:13" },
-{ text: "義人的道路好像黎明的光，越照越明，直到日午。", ref: "箴言 4:18" },
-{ text: "主是我的力量，是我的盾牌；我心裡倚靠他就得幫助。", ref: "詩篇 28:7" },
-{ text: "信是所望之事的實底，是未見之事的確據。", ref: "希伯來書 11:1" },
-{ text: "你們要讚美耶和華，因他本為善，他的慈愛永遠長存。", ref: "詩篇 107:1" },
-{ text: "神沒有賜給我們膽怯的心，乃是剛強、仁愛、謹守的心。", ref: "提摩太後書 1:7" },
-{ text: "你要認識神，就得平安，福氣也必臨到你。", ref: "約伯記 22:21" },
-{ text: "耶和華是我的力量，是我的詩歌，也成了我的拯救。", ref: "詩篇 118:14" },
-{ text: "你們要靠主常常喜樂，我再說，你們要喜樂。", ref: "腓立比書 4:4" },
-{ text: "忍耐到底的，必然得救。", ref: "馬太福音 24:13" },
-{ text: "惟有仰望耶和華的必重新得力。", ref: "以賽亞書 40:31" },
-{ text: "耶穌說，我是世界的光。", ref: "約翰福音 8:12" },
-{ text: "我們愛，因為神先愛我們。", ref: "約翰一書 4:19" },
-{ text: "我心裡柔和謙卑，你們當負我的軛，學我的樣式。", ref: "馬太福音 11:29" },
-{ text: "你們要彼此相愛，像我愛你們一樣。", ref: "約翰福音 15:12" },
-{ text: "耶和華的名是堅固臺，義人奔入便得安穩。", ref: "箴言 18:10" },
-{ text: "耶和華必為你爭戰，你們只管靜默，不要作聲。", ref: "出埃及記 14:14" },
-{ text: "要一無掛慮，只要凡事藉著禱告祈求和感謝將你們所要的告訴神。", ref: "腓立比書 4:6" },
-{ text: "不要效法這個世界，只要心意更新而變化。", ref: "羅馬書 12:2" },
-{ text: "我呼求的日子，你就應允我，鼓勵我，使我心裡有能力。", ref: "詩篇 138:3" },
-{ text: "神愛世人，甚至將他的獨生子賜給他們。", ref: "約翰福音 3:16" },
-{ text: "主耶和華是我的力量，他使我的腳快如母鹿的蹄。", ref: "哈巴谷書 3:19" },
-{ text: "你們要將一切的憂慮卸給神，因為他顧念你們。", ref: "彼得前書 5:7" },
-{ text: "耶和華是我的幫助，我必不懼怕。", ref: "希伯來書 13:6" },
-{ text: "我就是道路、真理、生命；若不藉著我，沒有人能到父那裡去。", ref: "約翰福音 14:6" },
-{ text: "那在你們心裡動了善工的，必成全這工。", ref: "腓立比書 1:6" },
-{ text: "耶和華是我的產業，是我杯中的分。", ref: "詩篇 16:5" },
+      {
+  text: `親愛的孩子，我知道你在工作上承擔了很多壓力，別擔心，我一直與你同行。每一次你選擇誠實、忍耐，我都看見並紀念。你不是孤單的，我會為你開路。`,
+  ref: "我總不撇下你，也不丟棄你。— 希伯來書13:5"
+},
+{
+  text: `孩子，你不需要用別人的眼光來定義你自己。我創造了你，是獨特且寶貴的。無論你做得多好或多差，我愛你從不改變。`,
+  ref: "我們愛，因為神先愛我們。— 約翰一書4:19"
+},
+{
+  text: `親愛的孩子，當你感到疲憊不堪的時候，記得可以來到我面前。我的懷抱永遠為你敞開，我願安慰你，賜你真正的安息。`,
+  ref: "凡勞苦擔重擔的人，可以到我這裡來，我就使你們得安息。— 馬太福音11:28"
+},
+{
+  text: `孩子，你為人著想的心我都知道。即使沒有人回報你的好意，我卻看見你願意愛人如己。這就是我喜悅的樣式。`,
+  ref: "施比受更為有福。— 使徒行傳20:35"
+},
+{
+  text: `親愛的孩子，當你在人群中感到格格不入時，別懷疑你的價值。你屬於我，我的愛使你完全。你是我的寶貝。`,
+  ref: "你們是被揀選的族類，是君尊的祭司。— 彼得前書2:9"
+},
+{
+  text: `孩子，當你對未來感到迷惘時，不要害怕。我會一步步引導你走義路，只要你願意仰望我，我就與你同行。`,
+  ref: "你要專心仰賴耶和華，不可倚靠自己的聰明。— 箴言3:5"
+},
+{
+  text: `親愛的孩子，你內心的眼淚，我都知道。我珍藏每一滴眼淚，並且親自安慰你，使你重新得力。`,
+  ref: "那流淚撒種的，必歡呼收割。— 詩篇126:5"
+},
+{
+  text: `孩子，我知道你渴望突破，渴望改變。別急，我的時間總是最剛好，我正在暗中為你預備最合適的門。`,
+  ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
+},
+{
+  text: `親愛的孩子，你所付出的，不會白費。就算別人沒有注意，我都記得。你的忠心，我必報答。`,
+  ref: "你們所做的，不是給人做的，乃是給主做的。— 歌羅西書3:23-24"
+},
+{
+  text: `孩子，在你覺得自己什麼都做不來的時候，不要灰心。我的能力，是在人的軟弱上顯得完全。靠著我，你能勝過。`,
+  ref: "我的恩典夠你用的，因為我的能力，是在人的軟弱上顯得完全。— 哥林多後書12:9"
+}
+{
+  text: "親愛的孩子，當你失望時，不要懷疑我對你的計劃。眼前的停滯，是為了將你預備得更堅固，迎接那更大的榮耀。",
+  ref: "我知道我向你們所懷的意念，是賜平安的意念，不是降災禍的意念。— 耶利米書29:11"
+},
+{
+  text: "孩子，有時候我容許你遇見風暴，是為了教你學會信靠。不要害怕，那些浪濤不能吞噬你，因為我與你同在。",
+  ref: "你從水中經過，我必與你同在；你躺臥在火中，也不被燒。— 以賽亞書43:2"
+},
+{
+  text: "親愛的孩子，當你在人群中感到孤單的時候，請記得，我從未離開你半步。你屬我，我深知你的名。",
+  ref: "婦人焉能忘記她吃奶的嬰孩？即或有忘記的，我卻不忘記你。— 以賽亞書49:15"
+},
+{
+  text: "孩子，你心裡那些說不出口的憂愁，我全都知道。我不輕看你的眼淚，因為我也是為你哭過的天父。",
+  ref: "耶穌哭了。— 約翰福音11:35"
+},
+{
+  text: "親愛的孩子，這世界有苦難，但你可以放心。我已經勝了世界。你會經歷掙扎，也會經歷我賜的得勝。",
+  ref: "在世上你們有苦難，但你們可以放心，我已經勝了世界。— 約翰福音16:33"
+},
+{
+  text: "孩子，當你為愛的人流淚禱告時，我與你一同守望。我聽見你心裡的祈求，到了時候，我要行事無人能阻止。",
+  ref: "你求告我，我就應允你，並將你所不知道、又大又難的事指示你。— 耶利米書33:3"
+},
+{
+  text: "親愛的孩子，當你跌倒時不要害怕，我是扶持你的那一位。不要因短暫的失敗懷疑我對你的呼召。",
+  ref: "義人雖七次跌倒，仍必興起。— 箴言24:16"
+},
+{
+  text: "孩子，你靜下來的時候，是我最愛對你說話的時刻。不是喧囂中的聲音，而是安靜中那微小卻清楚的引導。",
+  ref: "你們要休息，要知道我是神。— 詩篇46:10"
+},
+{
+  text: "親愛的孩子，你的未來不在這世界的混亂裡，而在我永恆的手中。末後的日子我要興起我兒女，成為世上的光。",
+  ref: "黑暗遮蓋大地，幽暗遮蓋萬民；耶和華卻要顯現照耀你。— 以賽亞書60:2"
+},
+{
+  text: "孩子，不論你走到哪裡，我的恩典都在你前面。今天的每一件小事，都不會浪費，我都用來編織出你的命定。",
+  ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
+}
+
 
     ];
 
