--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
@@ -44,104 +44,107 @@
   </div>
 
   <script>
-    const verses = [
-      {
-  text: `親愛的孩子，我知道你在工作上承擔了很多壓力，別擔心，我一直與你同行。每一次你選擇誠實、忍耐，我都看見並紀念。你不是孤單的，我會為你開路。`,
-  ref: "我總不撇下你，也不丟棄你。— 希伯來書13:5"
-},
-{
-  text: `孩子，你不需要用別人的眼光來定義你自己。我創造了你，是獨特且寶貴的。無論你做得多好或多差，我愛你從不改變。`,
-  ref: "我們愛，因為神先愛我們。— 約翰一書4:19"
-},
-{
-  text: `親愛的孩子，當你感到疲憊不堪的時候，記得可以來到我面前。我的懷抱永遠為你敞開，我願安慰你，賜你真正的安息。`,
-  ref: "凡勞苦擔重擔的人，可以到我這裡來，我就使你們得安息。— 馬太福音11:28"
-},
-{
-  text: `孩子，你為人著想的心我都知道。即使沒有人回報你的好意，我卻看見你願意愛人如己。這就是我喜悅的樣式。`,
-  ref: "施比受更為有福。— 使徒行傳20:35"
-},
-{
-  text: `親愛的孩子，當你在人群中感到格格不入時，別懷疑你的價值。你屬於我，我的愛使你完全。你是我的寶貝。`,
-  ref: "你們是被揀選的族類，是君尊的祭司。— 彼得前書2:9"
-},
-{
-  text: `孩子，當你對未來感到迷惘時，不要害怕。我會一步步引導你走義路，只要你願意仰望我，我就與你同行。`,
-  ref: "你要專心仰賴耶和華，不可倚靠自己的聰明。— 箴言3:5"
-},
-{
-  text: `親愛的孩子，你內心的眼淚，我都知道。我珍藏每一滴眼淚，並且親自安慰你，使你重新得力。`,
-  ref: "那流淚撒種的，必歡呼收割。— 詩篇126:5"
-},
-{
-  text: `孩子，我知道你渴望突破，渴望改變。別急，我的時間總是最剛好，我正在暗中為你預備最合適的門。`,
-  ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
-},
-{
-  text: `親愛的孩子，你所付出的，不會白費。就算別人沒有注意，我都記得。你的忠心，我必報答。`,
-  ref: "你們所做的，不是給人做的，乃是給主做的。— 歌羅西書3:23-24"
-},
-{
-  text: `孩子，在你覺得自己什麼都做不來的時候，不要灰心。我的能力，是在人的軟弱上顯得完全。靠著我，你能勝過。`,
-  ref: "我的恩典夠你用的，因為我的能力，是在人的軟弱上顯得完全。— 哥林多後書12:9"
-}
-{
-  text: "親愛的孩子，當你失望時，不要懷疑我對你的計劃。眼前的停滯，是為了將你預備得更堅固，迎接那更大的榮耀。",
-  ref: "我知道我向你們所懷的意念，是賜平安的意念，不是降災禍的意念。— 耶利米書29:11"
-},
-{
-  text: "孩子，有時候我容許你遇見風暴，是為了教你學會信靠。不要害怕，那些浪濤不能吞噬你，因為我與你同在。",
-  ref: "你從水中經過，我必與你同在；你躺臥在火中，也不被燒。— 以賽亞書43:2"
-},
-{
-  text: "親愛的孩子，當你在人群中感到孤單的時候，請記得，我從未離開你半步。你屬我，我深知你的名。",
-  ref: "婦人焉能忘記她吃奶的嬰孩？即或有忘記的，我卻不忘記你。— 以賽亞書49:15"
-},
-{
-  text: "孩子，你心裡那些說不出口的憂愁，我全都知道。我不輕看你的眼淚，因為我也是為你哭過的天父。",
-  ref: "耶穌哭了。— 約翰福音11:35"
-},
-{
-  text: "親愛的孩子，這世界有苦難，但你可以放心。我已經勝了世界。你會經歷掙扎，也會經歷我賜的得勝。",
-  ref: "在世上你們有苦難，但你們可以放心，我已經勝了世界。— 約翰福音16:33"
-},
-{
-  text: "孩子，當你為愛的人流淚禱告時，我與你一同守望。我聽見你心裡的祈求，到了時候，我要行事無人能阻止。",
-  ref: "你求告我，我就應允你，並將你所不知道、又大又難的事指示你。— 耶利米書33:3"
-},
-{
-  text: "親愛的孩子，當你跌倒時不要害怕，我是扶持你的那一位。不要因短暫的失敗懷疑我對你的呼召。",
-  ref: "義人雖七次跌倒，仍必興起。— 箴言24:16"
-},
-{
-  text: "孩子，你靜下來的時候，是我最愛對你說話的時刻。不是喧囂中的聲音，而是安靜中那微小卻清楚的引導。",
-  ref: "你們要休息，要知道我是神。— 詩篇46:10"
-},
-{
-  text: "親愛的孩子，你的未來不在這世界的混亂裡，而在我永恆的手中。末後的日子我要興起我兒女，成為世上的光。",
-  ref: "黑暗遮蓋大地，幽暗遮蓋萬民；耶和華卻要顯現照耀你。— 以賽亞書60:2"
-},
-{
-  text: "孩子，不論你走到哪裡，我的恩典都在你前面。今天的每一件小事，都不會浪費，我都用來編織出你的命定。",
-  ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
-}
+    // 確保DOM完全載入後再執行
+    document.addEventListener('DOMContentLoaded', function() {
+      const verses = [
+        {
+          text: `親愛的孩子，我知道你在工作上承擔了很多壓力，別擔心，我一直與你同行。每一次你選擇誠實、忍耐，我都看見並紀念。你不是孤單的，我會為你開路。`,
+          ref: "我總不撇下你，也不丟棄你。— 希伯來書13:5"
+        },
+        {
+          text: `孩子，你不需要用別人的眼光來定義你自己。我創造了你，是獨特且寶貴的。無論你做得多好或多差，我愛你從不改變。`,
+          ref: "我們愛，因為神先愛我們。— 約翰一書4:19"
+        },
+        {
+          text: `親愛的孩子，當你感到疲憊不堪的時候，記得可以來到我面前。我的懷抱永遠為你敞開，我願安慰你，賜你真正的安息。`,
+          ref: "凡勞苦擔重擔的人，可以到我這裡來，我就使你們得安息。— 馬太福音11:28"
+        },
+        {
+          text: `孩子，你為人著想的心我都知道。即使沒有人回報你的好意，我卻看見你願意愛人如己。這就是我喜悅的樣式。`,
+          ref: "施比受更為有福。— 使徒行傳20:35"
+        },
+        {
+          text: `親愛的孩子，當你在人群中感到格格不入時，別懷疑你的價值。你屬於我，我的愛使你完全。你是我的寶貝。`,
+          ref: "你們是被揀選的族類，是君尊的祭司。— 彼得前書2:9"
+        },
+        {
+          text: `孩子，當你對未來感到迷惘時，不要害怕。我會一步步引導你走義路，只要你願意仰望我，我就與你同行。`,
+          ref: "你要專心仰賴耶和華，不可倚靠自己的聰明。— 箴言3:5"
+        },
+        {
+          text: `親愛的孩子，你內心的眼淚，我都知道。我珍藏每一滴眼淚，並且親自安慰你，使你重新得力。`,
+          ref: "那流淚撒種的，必歡呼收割。— 詩篇126:5"
+        },
+        {
+          text: `孩子，我知道你渴望突破，渴望改變。別急，我的時間總是最剛好，我正在暗中為你預備最合適的門。`,
+          ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
+        },
+        {
+          text: `親愛的孩子，你所付出的，不會白費。就算別人沒有注意，我都記得。你的忠心，我必報答。`,
+          ref: "你們所做的，不是給人做的，乃是給主做的。— 歌羅西書3:23-24"
+        },
+        {
+          text: `孩子，在你覺得自己什麼都做不來的時候，不要灰心。我的能力，是在人的軟弱上顯得完全。靠著我，你能勝過。`,
+          ref: "我的恩典夠你用的，因為我的能力，是在人的軟弱上顯得完全。— 哥林多後書12:9"
+        },
+        {
+          text: "親愛的孩子，當你失望時，不要懷疑我對你的計劃。眼前的停滯，是為了將你預備得更堅固，迎接那更大的榮耀。",
+          ref: "我知道我向你們所懷的意念，是賜平安的意念，不是降災禍的意念。— 耶利米書29:11"
+        },
+        {
+          text: "孩子，有時候我容許你遇見風暴，是為了教你學會信靠。不要害怕，那些浪濤不能吞噬你，因為我與你同在。",
+          ref: "你從水中經過，我必與你同在；你躺臥在火中，也不被燒。— 以賽亞書43:2"
+        },
+        {
+          text: "親愛的孩子，當你在人群中感到孤單的時候，請記得，我從未離開你半步。你屬我，我深知你的名。",
+          ref: "婦人焉能忘記她吃奶的嬰孩？即或有忘記的，我卻不忘記你。— 以賽亞書49:15"
+        },
+        {
+          text: "孩子，你心裡那些說不出口的憂愁，我全都知道。我不輕看你的眼淚，因為我也是為你哭過的天父。",
+          ref: "耶穌哭了。— 約翰福音11:35"
+        },
+        {
+          text: "親愛的孩子，這世界有苦難，但你可以放心。我已經勝了世界。你會經歷掙扎，也會經歷我賜的得勝。",
+          ref: "在世上你們有苦難，但你們可以放心，我已經勝了世界。— 約翰福音16:33"
+        },
+        {
+          text: "孩子，當你為愛的人流淚禱告時，我與你一同守望。我聽見你心裡的祈求，到了時候，我要行事無人能阻止。",
+          ref: "你求告我，我就應允你，並將你所不知道、又大又難的事指示你。— 耶利米書33:3"
+        },
+        {
+          text: "親愛的孩子，當你跌倒時不要害怕，我是扶持你的那一位。不要因短暫的失敗懷疑我對你的呼召。",
+          ref: "義人雖七次跌倒，仍必興起。— 箴言24:16"
+        },
+        {
+          text: "孩子，你靜下來的時候，是我最愛對你說話的時刻。不是喧囂中的聲音，而是安靜中那微小卻清楚的引導。",
+          ref: "你們要休息，要知道我是神。— 詩篇46:10"
+        },
+        {
+          text: "親愛的孩子，你的未來不在這世界的混亂裡，而在我永恆的手中。末後的日子我要興起我兒女，成為世上的光。",
+          ref: "黑暗遮蓋大地，幽暗遮蓋萬民；耶和華卻要顯現照耀你。— 以賽亞書60:2"
+        },
+        {
+          text: "孩子，不論你走到哪裡，我的恩典都在你前面。今天的每一件小事，都不會浪費，我都用來編織出你的命定。",
+          ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
+        }
+      ];
 
+      const today = new Date();
+      const seed = parseInt(
+        String(today.getFullYear()) + 
+        String(today.getMonth() + 1).padStart(2, '0') + 
+        String(today.getDate()).padStart(2, '0')
+      );
 
-    ];
+      function seededIndex(seed, length) {
+        let x = Math.sin(seed) * 10000;
+        return Math.floor((x - Math.floor(x)) * length);
+      }
 
-    const today = new Date();
-    const seed = parseInt(
-      String(today.getFullYear()) + String(today.getMonth() + 1).padStart(2, '0') + String(today.getDate()).padStart(2, '0')
-    );
-
-    function seededIndex(seed, length) {
-      let x = Math.sin(seed) * 10000;
-      return Math.floor((x - Math.floor(x)) * length);
-    }
-
-    const index = seededIndex(seed, verses.length);
-    document.getElementById("verse").innerText = verses[index].text;
-    document.getElementById("reference").innerText = verses[index].ref;
+      const index = seededIndex(seed, verses.length);
+      document.getElementById("verse").innerText = verses[index].text;
+      document.getElementById("reference").innerText = verses[index].ref;
+    });
   </script>
 </body>
 </html>
