--- a/index.html
+++ b/index.html
@@ -127,6 +127,46 @@
           text: "孩子，不論你走到哪裡，我的恩典都在你前面。今天的每一件小事，都不會浪費，我都用來編織出你的命定。",
           ref: "萬事都互相效力，叫愛神的人得益處。— 羅馬書8:28"
         }
+        {
+  "text": "孩子，你心中那些無人明白的委屈，我都聽見了。你不需要向全世界解釋自己，因為我完全認識你，連你的頭髮我都數過了。在我眼中，你永遠值得被珍愛。",
+  "ref": "就是你們的頭髮也都被數過了。不要懼怕，你們比許多麻雀還貴重。— 路加福音12:7"
+        }
+        {
+  "text": "親愛的孩子，不要盯著別人園子裡的花朵焦慮。我為你預備的是獨一無二的生命道路，你的成長節奏正是最適合你的。相信我精心設計的時程表。",
+  "ref": "我們是祂的工作，在基督耶穌裡造成的。— 以弗所書2:10"
+        }
+        {
+  "text": "孩子，失敗不能定義你是誰。我的恩典足夠遮蓋一切過犯。站起來，握住我伸向你的手，我們一起從這經歷中學習。我永遠給你重新開始的機會。",
+  "ref": "我們若認自己的罪，神是信實的，是公義的，必要赦免我們的罪。— 約翰一書1:9"
+        }
+        {
+  "text": "我看見你為家人付出的每一分心力，那些深夜的禱告、默默的犧牲，都在我紀念之中。你正在做永恆的工作，你的愛心必不徒然。",
+  "ref": "你們的勞苦，在主裡面不是徒然的。— 哥林多前書15:58"
+       }
+       {
+  "text": "親愛的孩子，憤怒和傷痛我都明白。但請把審判的主權交給我，我是最公正的法官。你要做的，是繼續持守良善，我必為你伸冤。",
+  "ref": "親愛的弟兄，不要自己伸冤，寧可讓步，聽憑主怒。— 羅馬書12:19"
+       }
+       {
+  "text": "孩子，張開你緊握的雙手，把財務的重擔交給我。我是供應你的主，連野地的百合花我都妝扮，何況是我所愛的你呢？",
+  "ref": "你們要先求祂的國和祂的義，這些東西都要加給你們了。— 馬太福音6:33"
+       }
+      {
+  "text": "我知你心中對愛的渴望，那是我親自放在你裡面的。在你等候的季節，讓我先滿足你心靈最深處的渴求，我的愛比任何人的愛更完全。",
+  "ref": "你們親近神，神就必親近你們。— 雅各書4:8"
+     }
+      {
+  "text": "孩子，你身體的軟弱我都知道。這不是懲罰，而是我允許的考驗。在你無力的時刻，我的能力要成為你的支柱，我的平安作你的醫藥。",
+  "ref": "祂代替我們的軟弱，擔當我們的疾病。— 馬太福音8:17"
+     }
+      {
+  "text": "親愛的孩子，來我這裡重新汲水吧！事工不能定義你的價值，我愛的是你這個人，不是你做的事。安息在我懷裡，讓我滋潤你乾渴的心田。",
+  "ref": "你們得救在乎歸回安息，你們得力在乎平靜安穩。— 以賽亞書30:15"
+     }
+      {
+  "text": "不要因新聞報導驚惶，這一切都在我手中。末後的浪潮越是洶湧，越要定睛看我——我是平靜風浪的主，在你裡面有勝過世界的平安。",
+  "ref": "我將這些事告訴你們，是要叫你們在我裡面有平安。— 約翰福音16:33"
+     }
       ];
 
       const today = new Date();
