--- a/index.html
+++ b/index.html
@@ -44,38 +44,43 @@
       font-size: 1.2rem;
       color: #666;
     }
-  </style>
-  /* ➕ 分享按鈕樣式 */
-.share-buttons {
-  margin-top: 20px;
-}
-.share-buttons a {
-  display: inline-block;
-  margin: 0 10px;
-  padding: 8px 16px;
-  background-color: #e0e0e0;
-  color: #333;
-  text-decoration: none;
-  border-radius: 6px;
-  font-size: 0.9rem;
-  transition: background-color 0.3s;
-}
-.share-buttons a:hover {
-  background-color: #bbb;
-}
+        .share-buttons {
+      margin-top: 20px;
+    }
+    .share-buttons a {
+      display: inline-block;
+      margin: 0 10px;
+      padding: 8px 16px;
+      background-color: #e0e0e0;
+      color: #333;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      transition: background-color 0.3s;
+    }
+    .share-buttons a:hover {
+      background-color: #bbb;
+    }
 
+  </style>
 </head>
 <body>
   <div class="verse-box">
     <div id="verse" class="verse"></div>
     <div id="reference" class="reference"></div>
+    <div class="share-buttons">
+  <a href="#" id="share-line" target="_blank">分享到 LINE</a>
+  <a href="#" id="share-fb" target="_blank">分享到 Facebook</a>
+</div>
+
+    <!-- 分享按鈕 -->
+    <div class="share-buttons">
+      <a id="share-line" href="#" target="_blank">分享到 LINE</a>
+      <a id="share-facebook" href="#" target="_blank">分享到 Facebook</a>
+    </div>
     <div id="loader" class="loader">載入中...</div>
   </div>
-<!-- ➕ 分享按鈕 -->
-<div class="share-buttons">
-  <a id="share-line" href="#" target="_blank">分享到 LINE</a>
-  <a id="share-facebook" href="#" target="_blank">分享到 Facebook</a>
-</div>
+
   <script>
     // 先顯示載入中
     document.getElementById('loader').style.display = 'block';
@@ -304,6 +309,16 @@
         const index = getDailyIndex();
         document.getElementById('verse').textContent = verses[index].text;
         document.getElementById('reference').textContent = verses[index].ref;
+        // 更新分享按鈕的網址
+const text = encodeURIComponent(verses[index].text + ' - ' + verses[index].ref);
+const url = encodeURIComponent(window.location.href);
+
+// LINE 分享
+document.getElementById('share-line').href = `https://line.me/R/msg/text/?${text}`;
+
+// Facebook 分享（含網址與說明）
+document.getElementById('share-fb').href = `https://www.facebook.com/sharer/sharer.php?u=${url}&quote=${text}`;
+
         
         // 隱藏載入中
         document.getElementById('loader').style.display = 'none';
@@ -316,16 +331,5 @@
       }
     });
   </script>
-  // ➕ 設定分享連結
-const textToShare = `${selected.text}\n— ${selected.ref}`;
-const encodedText = encodeURIComponent(textToShare);
-const pageUrl = encodeURIComponent(window.location.href);
-
-// ➕ LINE 分享
-document.getElementById('share-line').href = `https://line.me/R/msg/text/?${encodedText}`;
-
-// ➕ Facebook 分享
-document.getElementById('share-facebook').href = `https://www.facebook.com/sharer/sharer.php?u=${pageUrl}`;
-
-</body>
+ </body>
 </html>
