--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
     .share-buttons a:hover {
       background-color: #bbb;
     }
+    .share-buttons {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+    .share-buttons a {
+      background-color: #e0e0e0;
+      color: #333;
+      padding: 10px 16px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .share-buttons a:hover {
+      background-color: #d0d0d0;
+    }
 
   </style>
 </head>
@@ -72,12 +91,6 @@
   <a href="#" id="share-line" target="_blank">分享到 LINE</a>
   <a href="#" id="share-fb" target="_blank">分享到 Facebook</a>
 </div>
-
-    <!-- 分享按鈕 -->
-    <div class="share-buttons">
-      <a id="share-line" href="#" target="_blank">分享到 LINE</a>
-      <a id="share-facebook" href="#" target="_blank">分享到 Facebook</a>
-    </div>
     <div id="loader" class="loader">載入中...</div>
   </div>
 
