--- a/index.html
+++ b/index.html
@@ -284,6 +284,168 @@
     text: "親愛的孩子，當你面對衰老的恐懼時，請聽我說：你的日子如何，你的力量也必如何。即使白髮蒼蒼，你仍能為我結果不止。",
     ref: "他們年老的時候仍要結果子，要滿了汁漿而常發青。— 詩篇92:14"
   }
+        
+  {
+    text: "親愛的孩子，當你夜深輾轉難眠，因未知的未來而焦慮，我在你旁邊守候。我知道你的每一個思緒，也預備你每一步的路程。",
+    ref: "你出你入，耶和華要保護你，從今時直到永遠。— 詩篇121:8"
+  },
+  {
+    text: "孩子，你辛苦了。當你努力卻看不到成果，請不要灰心。我在暗中看顧你的一切勞苦，到了時候，必要結果纍纍。",
+    ref: "你們行善，不可喪志；若不灰心，到了時候就要收成。— 加拉太書6:9"
+  },
+  {
+    text: "孩子，當你在照顧別人時感到筋疲力盡，別忘了你也需要被愛、被擁抱。我是你隨時的安慰與力量，願你也在我裡面得著恢復。",
+    ref: "凡勞苦擔重擔的人可以到我這裡來，我就使你們得安息。— 馬太福音11:28"
+  },
+  {
+    text: "親愛的，你不是孤單面對挑戰。我一直與你同行，即使你感覺不到我，我仍緊握你的手，絕不放開。",
+    ref: "不要害怕，因為我與你同在；不要驚惶，因為我是你的神。— 以賽亞書41:10"
+  },
+  {
+    text: "孩子，當你感到自卑與不足，請記得：你在我眼中是極寶貴的。你不是偶然的錯誤，而是我親手所造的奇妙作品。",
+    ref: "我要稱謝你，因我受造奇妙可畏。— 詩篇139:14"
+  },
+  {
+    text: "孩子，在你順利、被肯定的時刻，請來向我感恩。因為這一切的恩典，不是偶然，而是我為你鋪陳的美好祝福。",
+    ref: "各樣美善的恩賜和各樣全備的賞賜，都是從上頭來的。— 雅各書1:17"
+  },
+  {
+    text: "孩子，你在忍耐中的眼淚我都看見。即使沒有人理解你，我完全明白。我與你一同經歷，並在你裡面建造更堅固的盼望。",
+    ref: "你們務要忍耐，使你們行完了神的旨意，就可以得著所應許的。— 希伯來書10:36"
+  },
+  {
+    text: "親愛的，在你被拒絕、被誤解時，請不要懷疑自己的價值。你永遠是我心中所愛，無人能奪走我對你的肯定與接納。",
+    ref: "人若棄絕你，我卻永不丟棄你。— 詩篇27:10"
+  },
+  {
+    text: "孩子，當你為明天煩憂時，請交託給我。你所懼怕的，我都知道；你所需要的，我必預備。",
+    ref: "所以不要為明天憂慮，因為明天自有明天的憂慮。— 馬太福音6:34"
+  },
+  {
+    text: "孩子，不要小看你今天所做的微小善行。即使沒有人注意，我卻紀念你每一份出於愛的付出。",
+    ref: "你們既作在我這弟兄中一個最小的身上，就是作在我身上了。— 馬太福音25:40"
+  },
+  {
+    text: "親愛的，我知道你在家庭中默默承擔很多，或許無人道謝，但我看見你每日的委身，並要親自賜福你所作的一切。",
+    ref: "你手所辦的事，必蒙福；你出也蒙福，入也蒙福。— 申命記28:6"
+  },
+  {
+    text: "孩子，不要因他人的成就而自卑。你有你獨特的旅程，我為你安排的時間表，是精準而完美的。",
+    ref: "凡事都有定期，天下萬務都有定時。— 傳道書3:1"
+  },
+  {
+    text: "孩子，當你在人群中感到格格不入時，請記得：你是屬天的，我揀選你，不是要你模仿世界，而是活出真實的你。",
+    ref: "你們是被揀選的族類，是有君尊的祭司，是聖潔的國度。— 彼得前書2:9"
+  },
+  {
+    text: "孩子，即使你過去曾犯錯、曾失敗，我仍不改變對你的愛。來到我面前，我赦免、更新，使你重新開始。",
+    ref: "我們若認自己的罪，神是信實的，是公義的，必要赦免我們的罪。— 約翰一書1:9"
+  },
+  {
+    text: "親愛的孩子，當你不知所措，不知道該往哪走時，請安靜你的心。我會指引你腳前的路，如晨光照亮你前方。",
+    ref: "你要專心仰賴耶和華，不可倚靠自己的聰明。— 箴言3:5-6"
+  },
+  {
+    text: "孩子，當你為了生活拚搏而身心俱疲，請到我面前歇息。你不是機器，我創造你是為了愛與連結，不是為了不斷奔跑。",
+    ref: "你們得力在乎平靜安穩；你們得救在乎歸回安息。— 以賽亞書30:15"
+  },
+  {
+    text: "孩子，當別人不理解你夢想的價值，請來聽我說話。我在你心中放下的異象，不會落空，只是尚在成長中。",
+    ref: "這默示有一定的日期，快要應驗，並不虛謊；雖然遲延，還要等候。— 哈巴谷書2:3"
+  },
+  {
+    text: "親愛的孩子，不要怕年歲的增長或身體的變化。你在我眼中仍如昔日美好，我看重的，是你日益溫柔的心靈。",
+    ref: "外體雖然毀壞，內心卻一天新似一天。— 哥林多後書4:16"
+  },
+  {
+    text: "孩子，不要怕失敗。每一次跌倒都是我塑造你品格的機會。你不是被定義於一次失誤，而是被我稱為『被愛的』。",
+    ref: "義人雖七次跌倒，仍必興起。— 箴言24:16"
+  },
+  {
+    text: "親愛的，在你看似平凡的日子裡，我正在暗中行大事。你忠心所做的，我都紀念，並在適時為你開門。",
+    ref: "因你在不多的事上有忠心，我要派你管理許多事。— 馬太福音25:21"
+  }
+        
+  {
+    text: "孩子，你為了他人付出良多，卻常常被忽略。我要你知道，你的溫柔與善良，在我眼中極其寶貴，永不被遺忘。",
+    ref: "善人所行的，必得稱讚。— 箴言12:2"
+  },
+  {
+    text: "親愛的，不要因別人的批評而懷疑自己的價值。我是你真正的評價者，我稱你為我的喜悅，我眼中的珍寶。",
+    ref: "因你在我眼中看為寶貴，為尊榮，我又愛你。— 以賽亞書43:4"
+  },
+  {
+    text: "孩子，當你覺得自己信心軟弱時，不要自責。我不要求你完美，只渴望你願意依靠我，哪怕只有像芥菜種那樣小的信心。",
+    ref: "你們若有信心像一粒芥菜種…沒有一件不能作的事了。— 馬太福音17:20"
+  },
+  {
+    text: "孩子，當你在婚姻或家庭中經歷磨難，請記得我能使枯乾的心重新湧出愛的泉源。只要你願意，我能重建一切。",
+    ref: "神所配合的，人不可分開。— 馬可福音10:9"
+  },
+  {
+    text: "親愛的孩子，不要因等待太久而失去盼望。我的時間表不會遲延，每一步都是為你鋪陳更深的祝福與預備。",
+    ref: "那等候耶和華的必重新得力。— 以賽亞書40:31"
+  },
+  {
+    text: "孩子，當你懷疑自己的選擇是否正確，請安靜來到我面前。我會引導你前行，不讓你在混亂中迷失方向。",
+    ref: "你當認定他，他必指引你的路。— 箴言3:6"
+  },
+  {
+    text: "孩子，即使這世界用成就來衡量你，我卻看重你的心。你的誠實、仁愛與忠心，是我最看重的美麗。",
+    ref: "耶和華看人不像人看人，人是看外貌；耶和華是看內心。— 撒母耳記上16:7"
+  },
+  {
+    text: "親愛的，你不需要假裝堅強。我喜悅你把脆弱攤開給我，因為在你最軟弱時，我的能力更完全地臨到你。",
+    ref: "我的恩典夠你用的，因為我的能力是在人的軟弱上顯得完全。— 哥林多後書12:9"
+  },
+  {
+    text: "孩子，你不是因為什麼成就才被愛，而是因為你是我的。我在你出生前就已經深愛你，這份愛永不改變。",
+    ref: "我以永遠的愛愛你，因此我以慈愛吸引你。— 耶利米書31:3"
+  },
+  {
+    text: "孩子，當生活像風浪般襲來，請轉眼仰望我。就像彼得走在海面上，只要你不移開眼光，你就能穩行其上。",
+    ref: "你們的心不要憂愁，也不要膽怯。— 約翰福音14:27"
+  },
+  {
+    text: "孩子，當你在照顧年幼的、年長的，或處於忙碌的家庭生活時，別忘了我在你日常的忙碌中，與你同行。",
+    ref: "你行路，他必引導你；你躺臥，他必保守你。— 箴言6:22"
+  },
+  {
+    text: "親愛的，即使你覺得自己沒什麼特別，我卻將我榮耀的形象放在你裡面。你比你所想的還要美麗與尊貴。",
+    ref: "你叫他比天使微小一點，並賜他榮耀尊貴為冠冕。— 詩篇8:5"
+  },
+  {
+    text: "孩子，當你看見世界的混亂與不公，請不要心灰意冷。我仍坐在寶座上，並且差遣你去作光作鹽。",
+    ref: "你們是世上的光，是山上城，是不能隱藏的。— 馬太福音5:14"
+  },
+  {
+    text: "孩子，別怕開口禱告。我不在乎你說得多麼完美，只在乎你願不願意與我說話。我聽你每一句話語，甚至你的嘆息。",
+    ref: "你還未求告，我就應允；正說話的時候，我已聽見。— 以賽亞書65:24"
+  },
+  {
+    text: "親愛的孩子，你的淚水不是白流的。它們落下的每一滴，我都細細收藏，並在天上記念。",
+    ref: "我把我流離的事記下；求你把我的眼淚裝在你的皮袋裡。— 詩篇56:8"
+  },
+  {
+    text: "孩子，當你感到信仰枯乾，靈裡沉重時，請再回到我這裡。像鹿渴慕溪水，我渴望與你重新相遇。",
+    ref: "神啊，我的心切慕你，如鹿渴慕溪水。— 詩篇42:1"
+  },
+  {
+    text: "親愛的，不要因為路還沒走到終點就懷疑自己的旅程。你已經走得比你想像中更遠，我與你同在，直到最後一步。",
+    ref: "我就常與你們同在，直到世界的末了。— 馬太福音28:20"
+  },
+  {
+    text: "孩子，當你在服事中感到疲乏，甚至質疑自己的價值，請記住：你所做的每一件小事，我都看在眼裡，並要賞賜。",
+    ref: "你們所作的，不是給人作的，乃是給主作的。— 歌羅西書3:23"
+  },
+  {
+    text: "孩子，不要害怕嘗試新的方向。我會打開合宜的門，也會關閉不合適的路。信我，我是你人生的導航者。",
+    ref: "我在你面前給你一個敞開的門，是無人能關的。— 啟示錄3:8"
+  },
+  {
+    text: "親愛的，你的禱告我沒有忘記。即使你以為我沉默，其實我正安排最好的時刻來成就你所求的。",
+    ref: "義人祈禱所發的力量，是大有功效的。— 雅各書5:16"
+  }
       ];
 
       // 強化版每日經文選擇
